k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmanager-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: taskmanager.89.145.167.242.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskmanager-app-service
                port:
                  number: 3000
